login,signin,logout are done

--- a/frontend/src/pages/home/components/messagebar/messagebar.css
+++ b/frontend/src/pages/home/components/messagebar/messagebar.css
@@ -6,6 +6,9 @@
 ************************************************/
 
 .selected-user {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     padding: 0 15px;
     min-height: 64px;
