--- a/frontend/src/pages/home/components/messagebar/messagebar.css
+++ b/frontend/src/pages/home/components/messagebar/messagebar.css
@@ -1,22 +1,16 @@
-
-/************************************************
-	************************************************
-									Chat right side
-	************************************************
-************************************************/
-
 .selected-user {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-width: 600px;
     width: 100%;
-    padding: 0 15px;
     min-height: 64px;
     line-height: 64px;
     border-bottom: 1px solid #e6ecf3;
     -webkit-border-radius: 0 3px 0 0;
     -moz-border-radius: 0 3px 0 0;
     border-radius: 0 3px 0 0;
+    padding: 1rem;
 }
 
 .selected-user span {
@@ -119,7 +113,16 @@
     margin: 0 15px 0 0;
 }
 
+@media (max-width: 992px) {
+    .selected-user {
+        min-width: 450px;
+    }
+}
+
 @media (max-width: 767px) {
+    .selected-user {
+        min-width: 300px;
+    }
     .chat-container li.chat-left,
     .chat-container li.chat-right {
         flex-direction: column;
@@ -193,3 +196,4 @@ ul {
     border-radius: 5px;
     background-color: #f9f9f9;
 }
+
