--- a/frontend/src/pages/home/components/namebar/namebar.css
+++ b/frontend/src/pages/home/components/namebar/namebar.css
@@ -1,4 +1,3 @@
-body{margin-top:20px;}
 /*************** 1.Variables ***************/
 
 
@@ -13,43 +12,6 @@ body{margin-top:20px;}
 										Search Box
 	************************************************
 ************************************************/
-
-.chat-search-box {
-    -webkit-border-radius: 3px 0 0 0;
-    -moz-border-radius: 3px 0 0 0;
-    border-radius: 3px 0 0 0;
-    padding: .75rem 1rem;
-}
-
-.chat-search-box .input-group .form-control {
-    -webkit-border-radius: 2px 0 0 2px;
-    -moz-border-radius: 2px 0 0 2px;
-    border-radius: 2px 0 0 2px;
-    border-right: 0;
-}
-
-.chat-search-box .input-group .form-control:focus {
-    border-right: 0;
-}
-
-.chat-search-box .input-group .input-group-btn .btn {
-    -webkit-border-radius: 0 2px 2px 0;
-    -moz-border-radius: 0 2px 2px 0;
-    border-radius: 0 2px 2px 0;
-    margin: 0;
-}
-
-.chat-search-box .input-group .input-group-btn .btn i {
-    font-size: 1.2rem;
-    line-height: 100%;
-    vertical-align: middle;
-}
-
-@media (max-width: 767px) {
-    .chat-search-box {
-        display: none;
-    }
-}
 
 
 /************************************************
@@ -104,7 +66,7 @@ body{margin-top:20px;}
     background-image: linear-gradient(right, #e9eff5, #ffffff);
 }
 
-.users .person.active-user {
+.users .person.active {
     background-color: #ffffff;
     /* Fallback Color */
     background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f9fb), to(#ffffff));
@@ -177,6 +139,11 @@ body{margin-top:20px;}
     font-size: .7rem;
     text-align: right;
     color: #8796af;
+}
+
+.user_list{
+    align-items: center;
+    justify-content: space-between;
 }
 
 @media (max-width: 767px) {
