--- a/frontend/src/pages/signup/signup.css
+++ b/frontend/src/pages/signup/signup.css
@@ -1,33 +1,18 @@
-.login{
-    max-width: auto;
-    flex-direction:column;
+.register{
+    height:auto;
 }
-.card{
-    background-color: rgba(0,0,0,0.1);
+.register select{
+    background-color: transparent;
 }
-.bg-image-vertical {
-    position: relative;
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: auto 100%;
+.register select:focus{
+    background-color: transparent;
+    color: black;
+    font-size:18px;
 }
-.form{
-    width: 23rem;
-} 
-.logo{
-    color: #709085;
-}
-.login_heading{
-    letter-spacing: 1px;
-}
-.img{
-    object-fit: cover; 
-    object-position: left;
+.register select:focus option {
+    background-color: #bde0fe;
 }
 
-@media (min-width: 1025px) {
-    .h-custom-2 {
-        height: 100%;
-    }
+.register select option:hover {
+    background-color: #a1c4fd;
 }
