--- a/frontend/src/pages/home/components/namebar/namebar.css
+++ b/frontend/src/pages/home/components/namebar/namebar.css
@@ -23,7 +23,7 @@
 .users-container {
     position: relative;
     padding: 1rem 0;
-    border-right: 1px solid #e6ecf3;
+    border-right: 1px solid rgba(230, 236, 243, 0.48);
     height: 100%;
     display: -ms-flexbox;
     display: flex;
@@ -37,7 +37,9 @@
 											Users
 	************************************************
 ************************************************/
-
+.searchbar{
+    margin-bottom: 10px;
+}
 .users {
     padding: 0;
 }
@@ -47,39 +49,45 @@
     width: 100%;
     padding: 10px 1rem;
     cursor: pointer;
-    border-bottom: 1px solid #f0f4f8;
+    border-bottom: 1px solid rgba(230, 236, 243, 0.48);
+    border-radius:12px;
+    border-bottom-left-radius:0px;
+    border-bottom-right-radius:0px;
 }
 
 .users .person:hover {
-    background-color: #ffffff;
+    background-color:rgba(230, 236, 243, 0.48);
+    border-bottom-left-radius:12px;
+    border-bottom-right-radius:12px;
     /* Fallback Color */
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#e9eff5), to(#ffffff));
+    /* background-image: -webkit-gradient(linear, left top, left bottom, from(#e9eff5), to(#ffffff)); */
     /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(right, #e9eff5, #ffffff);
+    /* background-image: -webkit-linear-gradient(right, #e9eff5, #ffffff); */
     /* Chrome 10+, Saf5.1+, iOS 5+ */
-    background-image: -moz-linear-gradient(right, #e9eff5, #ffffff);
+    /* background-image: -moz-linear-gradient(right, #e9eff5, #ffffff); */
     /* FF3.6 */
-    background-image: -ms-linear-gradient(right, #e9eff5, #ffffff);
+    /* background-image: -ms-linear-gradient(right, #e9eff5, #ffffff); */
     /* IE10 */
-    background-image: -o-linear-gradient(right, #e9eff5, #ffffff);
+    /* background-image: -o-linear-gradient(right, #e9eff5, #ffffff); */
     /* Opera 11.10+ */
-    background-image: linear-gradient(right, #e9eff5, #ffffff);
+    /* background-image: linear-gradient(right, #e9eff5, #ffffff); */
 }
 
 .users .person.active {
-    background-color: #ffffff;
+    background-color:rgb(93, 100, 107);
+    border-radius:12px;
     /* Fallback Color */
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f9fb), to(#ffffff));
+    /* background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f9fb), to(#ffffff)); */
     /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(right, #f7f9fb, #ffffff);
+    /* background-image: -webkit-linear-gradient(right, #f7f9fb, #ffffff); */
     /* Chrome 10+, Saf5.1+, iOS 5+ */
-    background-image: -moz-linear-gradient(right, #f7f9fb, #ffffff);
+    /* background-image: -moz-linear-gradient(right, #f7f9fb, #ffffff); */
     /* FF3.6 */
-    background-image: -ms-linear-gradient(right, #f7f9fb, #ffffff);
+    /* background-image: -ms-linear-gradient(right, #f7f9fb, #ffffff); */
     /* IE10 */
-    background-image: -o-linear-gradient(right, #f7f9fb, #ffffff);
+    /* background-image: -o-linear-gradient(right, #f7f9fb, #ffffff); */
     /* Opera 11.10+ */
-    background-image: linear-gradient(right, #f7f9fb, #ffffff);
+    /* background-image: linear-gradient(right, #f7f9fb, #ffffff); */
 }
 
 .users .person:last-child {
@@ -89,6 +97,7 @@
 .users .person .user {
     display: inline-block;
     position: relative;
+    bottom: 10px;
     margin-right: 10px;
 }
 
@@ -98,6 +107,8 @@
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     border-radius: 50px;
+    position:relative;
+    top:10px;
 }
 
 .users .person .user .status {
@@ -108,12 +119,12 @@
     border-radius: 100px;
     background: #e6ecf3;
     position: absolute;
-    top: 0;
+    top: 8px;
     right: 0;
 }
 
 .users .person .user .status.online {
-    background: #9ec94a;
+    background:rgb(163, 227, 34);
 }
 
 .users .person .user .status.offline {
@@ -129,16 +140,26 @@
 }
 
 .users .person p.name-time {
+    justify-content: space-between;
     font-weight: 600;
     font-size: .85rem;
     display: inline-block;
+    position: relative;
+    top: 15px;
+    color: #c4d2e2;
 }
-
+.users .person.active p.name-time{
+    color: white;
+}
+.users .person p.name-time .name {
+    font-weight: 500;
+    font-size: 14px;
+}
 .users .person p.name-time .time {
     font-weight: 400;
     font-size: .7rem;
     text-align: right;
-    color: #8796af;
+    padding-left: 10px;
 }
 
 .user_list{
