--- a/frontend/src/pages/home/components/namebar/namebar.css
+++ b/frontend/src/pages/home/components/namebar/namebar.css
@@ -24,11 +24,12 @@
     position: relative;
     padding: 1rem 0;
     border-right: 1px solid rgba(230, 236, 243, 0.48);
-    height: 100%;
+    height: 90vh;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 
@@ -39,9 +40,13 @@
 ************************************************/
 .searchbar{
     margin-bottom: 10px;
+    position: fixed;
+    width:24%;
+    z-index:100;
+    background-color: black;
 }
 .users {
-    padding: 0;
+    margin-top: 90px;
 }
 
 .users .person {
