changes are added

--- a/frontend/src/pages/home/components/messagebar/messagebar.css
+++ b/frontend/src/pages/home/components/messagebar/messagebar.css
@@ -171,6 +171,12 @@
     color:white;
     font-weight:400;
 }
+.popup{
+    display: auto;
+}
+.no{
+    display:none;
+}
 
 @media (max-width: 992px) {
     .selected-user {
