--- a/frontend/src/pages/home/components/nochatselected/nochatselected.css
+++ b/frontend/src/pages/home/components/nochatselected/nochatselected.css
@@ -10,3 +10,15 @@
     margin-left: 7px;
     color: #25cff2;
 }
+.buttontoLogout{
+    padding:20px;
+    gap:15px;
+    height:67px;
+    border-radius: 40px;
+    font-size:17px;
+}
+.buttontoLogout:hover{
+    transition: 0.5s ease-in-out;
+    scale:calc(1.1);
+    background-color: #28a745;
+}
